--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catalog Cat Energy</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
 
   <body class="page__body">
@@ -331,6 +331,6 @@
         </div>
       </div>
     </footer>
-    <script src="./scripts/script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
