--- a/source/form.html
+++ b/source/form.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Form Cat Energy</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
@@ -96,8 +96,7 @@
               <input type="email" class="text-input__input group-contact__input" value="kuklachev@gmail.com" required>
               <svg class="text-input__icon" width="18" height="14" viewBox="0 0 18 14" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
-                <path d="M0.5 5.5V13.5H17.5V5.5M0.5 0.5H17.5V2.5L9 8.5L0.5 2.5V0.5Z" stroke="black"
-                  stroke-linecap="round" stroke-linejoin="round" />
+                <use href="./img/sprite.svg#letter">
               </svg>
             </li>
             <li class="form__item group-contact__item text-input">
@@ -105,9 +104,7 @@
               <input type="tel" class="text-input__input group-contact__input" value="8 (960) 900-60-90" required>
               <svg class="text-input__icon" width="16" height="16" viewBox="0 0 16 16" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
-                <path
-                  d="M7 8H15.5M15.5 8L13 5.5M15.5 8L13 10.5M5.5 0.5V5.5H2.5V10.5H5.5V15.5H3C1.5 15.5 0.5 14.5 0.5 13V3C0.5 1.5 1.5 0.5 3 0.5H5.5Z"
-                  stroke="black" stroke-linecap="round" stroke-linejoin="round" />
+                <use href="./img/sprite.svg#phone">
               </svg>
             </li>
           </ul>
@@ -228,23 +225,32 @@
           <ul class="main-footer__list social">
             <li class="social__item">
               <a class="social__link social__link--vk" href="#">
+                <svg class="social__svg" width="28" height="17" viewBox="0 0 28 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <use href="./img/sprite.svg#vk"></use>
+                  </svg>
                 <span class="visually-hidden">Мы в ВКонтакте</span>
               </a>
             </li>
             <li class="social__item">
               <a class="social__link social__link--youtube" href="#">
+                <svg class="social__svg" width="25" height="19" viewBox="0 0 25 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <use href="./img/sprite.svg#youtube"></use>
+                  </svg>
                 <span class="visually-hidden">Мы в Ютубе</span>
               </a>
             </li>
             <li class="social__item">
               <a class="social__link social__link--telegram" href="#">
+                <svg class="social__svg" width="21" height="18" viewBox="0 0 21 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <use href="./img/sprite.svg#telegram"></use>
+                  </svg>
                 <span class="visually-hidden">Мы в Телеграме</span>
               </a>
             </li>
           </ul>
         </div>
         <div class="main-footer__copyright">
-          <a class="main-footer__copyright-descr" href="#">
+          <a class="main-footer__copyright-descr main-footer__form" href="#">
             <svg class="main-footer__copyright-svg" width="112" height="16" viewBox="0 0 112 16" fill="none"
               xmlns="http://www.w3.org/2000/svg">
               <path
@@ -252,23 +258,15 @@
             </svg>
           </a>
           <a class="main-footer__copyright-image" href="#">
-            <svg class="main-footer__image-svg" width="27" height="34" viewBox="0 0 27 34" fill="none"
+            <svg class="main-footer__svg" class="main-footer__image-svg" width="27" height="34" viewBox="0 0 27 34" fill="none"
               xmlns="http://www.w3.org/2000/svg">
-              <g clip-path="url(#clip0_99564_329)">
-                <path
-                  d="M13.6426 0.0157537L13.5 0L0 1.40733V26.0129L13.5 34L27 26.0129V1.40733L13.6426 0.0157537ZM25.2344 25.0151L13.5 31.9573L1.76561 25.0151V14.9293L13.4507 21.8451L13.4701 23.0984L5.45351 18.3548L5.44295 19.5801L13.4894 24.3885L13.5088 25.675L5.46408 20.9174L5.45351 22.1427L13.5 26.9511L21.6239 22.1182V20.8929V16.909L25.2432 14.7595L25.2344 25.0151ZM25.2344 13.4519L22.0147 15.3319L20.5325 16.2071L13.4666 12.0201L13.456 13.2454L19.4957 16.818L19.4429 16.8495L19.3126 16.9247L18.4536 17.4166L13.4666 14.4689L13.456 15.6942L17.3921 18.0222L16.4591 18.6314L16.438 18.6436L13.4666 16.902L13.456 18.1273L15.4029 19.2615L13.4155 20.4483L1.7973 13.5762L13.4349 6.61831L25.2344 13.4519ZM25.2344 12.2266L13.4401 5.31075L1.76561 12.2196V2.9897L13.5 1.76442L25.2344 2.9897V12.2266Z" />
-              </g>
-              <defs>
-                <clipPath id="clip0_99564_329">
-                  <rect width="27" height="34" fill="white" />
-                </clipPath>
-              </defs>
+              <use href="./img/sprite.svg#footer-icon">
             </svg>
           </a>
         </div>
       </div>
     </footer>
-    <script src="./scripts/script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 
 </html>
