--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Academy: Кэт энерджи</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body class="page__body page__body--index">
@@ -99,50 +99,48 @@
     </section>
     <section class="example">
       <div class="example__wrapper">
-        <h2 class="example__title second-title">Живой пример</h2>
+        <div class="example__title-wrapper">
+          <h2 class="example__title second-title">Живой пример</h2>
+        </div>
         <div class="example__container">
-          <p class="example__explane card-descr">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat
-            Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему
-            спит по 16 часов в день. </p>
-          <dl class="example__list">
-            <dt class="example__term">5 кг</dt>
-            <dd class="example__descr">
-              <span class="example__line">снижение веса</span>
-            </dd>
-            <dt class="example__term">60 дней</dt>
-            <dd class="example__descr">
-              <span class="example__line">затрачено времени</span>
-            </dd>
-          </dl>
-          <div class="example__div">
-            <span class="example__span example__span--top">Затраты на питание:</span>
-            <span class="example__span example__span--bottom"> 15 000 РУБ.</span>
+          <div class="example__text-wrapper">
+            <p class="example__explane card-descr">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на
+              Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и
+              по-прежнему
+              спит по 16 часов в день. </p>
+            <dl class="example__list">
+              <dt class="example__term">5 кг</dt>
+              <dd class="example__descr">
+                <span class="example__line">снижение веса</span>
+              </dd>
+              <dt class="example__term">60 дней</dt>
+              <dd class="example__descr">
+                <span class="example__line">затрачено времени</span>
+              </dd>
+            </dl>
+            <div class="example__div">
+              <span class="example__span example__span--top">Затраты на питание:</span>
+              <span class="example__span example__span--bottom"> 15 000 РУБ.</span>
+            </div>
           </div>
           <div class="example__contain slider">
             <ul class="slider__list">
               <li class="slider__item">
                 <picture>
+                  <source media="(min-width: 768px)" type="image/webp" srcset="./img/thin-cat-tablet.webp 1x, ./img/thin-cat-tablet@2x.webp 2x">
+                  <source media="(min-width: 10px)" type="image/webp" srcset="./img/thin-cat.webp 1x, ./img/thin-cat@2x.webp 2x">
                   <source media="(min-width: 768px)"
                     srcset="./img/thin-cat-tablet.png 1x, ./img/thin-cat-tablet@2x.png 2x">
                   <img class="slider__image" src="./img/thin-cat.png" srcset="./img/thin-cat@2x.png 2x"
                     alt="Фото худого кота">
-                </picture>
+                  </picture>
               </li>
               <li class="slider__item slider__item--fat">
-                <div class="slider__curtain">
-                  <button class="slider__button" type="button">
-                    <svg class="slider__icon" width="40" height="40" viewBox="0 0 40 40" fill="none"
-                      xmlns="http://www.w3.org/2000/svg">
-                      <rect x="1" y="1" width="38" height="38" rx="19" fill="white" />
-                      <path d="M16 11L8 20L16 29V11Z" />
-                      <path d="M32 20L24 11V29L32 20Z" />
-                      <rect x="1" y="1" width="38" height="38" rx="19" stroke-width="2" />
-                    </svg>
-                    <span class="visually-hidden">Шторка для переключения изображения котов</span>
-                  </button>
-                </div>
               </li>
             </ul>
+            <button class="slider__button" type="button">
+              <span class="visually-hidden">Шторка для переключения изображения котов</span>
+            </button>
           </div>
         </div>
       </div>
@@ -165,6 +163,9 @@
         </div>
         <div class="map__image-container">
           <picture>
+            <source media="(min-width: 1440px)" type="image/webp" srcset="./img/location-desktop.webp 1x, ./img/location-desktop@2x.webp 2x">
+            <source media="(min-width: 768px)" type="image/webp" srcset="./img/location-tablet.webp 1x, ./img/location-tablet@2x.webp 2x">
+            <source media="(min-width: 10px)" type="image/webp" srcset="./img/location.webp 1x, ./img/location@2x.webp 2x">
             <source media="(min-width: 1440px)"
               srcset="./img/location-desktop.jpg 1x, ./img/location-desktop@2x.jpg 2x">
             <source media="(min-width: 768px)" srcset="./img/location-tablet.jpg 1x, ./img/location-tablet@2x.jpg 2x">
@@ -218,16 +219,25 @@
         <ul class="main-footer__list social">
           <li class="social__item">
             <a class="social__link social__link--vk" href="#">
+              <svg class="social__svg" width="28" height="17" viewBox="0 0 28 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <use href="./img/sprite.svg#vk"></use>
+                </svg>
               <span class="visually-hidden">Мы в ВКонтакте</span>
             </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link--youtube" href="#">
+              <svg class="social__svg" width="25" height="19" viewBox="0 0 25 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <use href="./img/sprite.svg#youtube"></use>
+                </svg>
               <span class="visually-hidden">Мы в Ютубе</span>
             </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link--telegram" href="#">
+              <svg class="social__svg" width="21" height="18" viewBox="0 0 21 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <use href="./img/sprite.svg#telegram"></use>
+                </svg>
               <span class="visually-hidden">Мы в Телеграме</span>
             </a>
           </li>
@@ -242,23 +252,15 @@
           </svg>
         </a>
         <a class="main-footer__copyright-image" href="#">
-          <svg class="main-footer__image-svg" width="27" height="34" viewBox="0 0 27 34" fill="none"
+          <svg class="main-footer__svg" class="main-footer__image-svg" width="27" height="34" viewBox="0 0 27 34" fill="none"
             xmlns="http://www.w3.org/2000/svg">
-            <g clip-path="url(#clip0_99564_329)">
-              <path
-                d="M13.6426 0.0157537L13.5 0L0 1.40733V26.0129L13.5 34L27 26.0129V1.40733L13.6426 0.0157537ZM25.2344 25.0151L13.5 31.9573L1.76561 25.0151V14.9293L13.4507 21.8451L13.4701 23.0984L5.45351 18.3548L5.44295 19.5801L13.4894 24.3885L13.5088 25.675L5.46408 20.9174L5.45351 22.1427L13.5 26.9511L21.6239 22.1182V20.8929V16.909L25.2432 14.7595L25.2344 25.0151ZM25.2344 13.4519L22.0147 15.3319L20.5325 16.2071L13.4666 12.0201L13.456 13.2454L19.4957 16.818L19.4429 16.8495L19.3126 16.9247L18.4536 17.4166L13.4666 14.4689L13.456 15.6942L17.3921 18.0222L16.4591 18.6314L16.438 18.6436L13.4666 16.902L13.456 18.1273L15.4029 19.2615L13.4155 20.4483L1.7973 13.5762L13.4349 6.61831L25.2344 13.4519ZM25.2344 12.2266L13.4401 5.31075L1.76561 12.2196V2.9897L13.5 1.76442L25.2344 2.9897V12.2266Z" />
-            </g>
-            <defs>
-              <clipPath id="clip0_99564_329">
-                <rect width="27" height="34" fill="white" />
-              </clipPath>
-            </defs>
+            <use href="./img/sprite.svg#footer-icon">
           </svg>
         </a>
       </div>
     </div>
   </footer>
-  <script src="./scripts/script.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
